Mon Dec 14 13:58:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Simplified generated code

Mon Dec 14 07:26:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Exposed_Policies/RT_Properties.{h,cpp}:
          Fixed unicode runtime problems

Fri Dec 11 18:27:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Makefile.am:
          Removed all duplicated files

Fri Dec 11 16:36:58 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tao/Valuetype/ValueBase.h:

          Removed explicit type specification for indirection flag to
          fix implicit constant conversion overflow warning.

Fri Dec 11 12:27:25 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Bug_2285_Regression/run_test2.pl:
        * orbsvcs/tests/Bug_2285_Regression/server2.cpp:
        * orbsvcs/tests/Notify/Ordering/run_test.pl:
        * orbsvcs/tests/Notify/MC/run_test.pl:
        * orbsvcs/tests/Notify/Discarding/run_test.pl:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/NameService/run_test.pl:
        * orbsvcs/tests/ImplRepo/run_test.pl:
        * orbsvcs/tests/Bug_2248_Regression/server.cpp:
        * orbsvcs/tests/Bug_2248_Regression/run_test.pl:
        * tests/AlternateIIOP/run_test.pl:
        * examples/Load_Balancing/run_test.pl:

          Tests are converted to use new test framework
          and added to fuzz build.

Fri Dec 11 09:58:33 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Notify/performance-tests/scripts/1_Path_Period_0_Lanes/run_test.pl:
        * orbsvcs/tests/Notify/performance-tests/scripts/3_Path_Period_10ms_Lanes/run_test.pl: