@@ -82,7 +82,6 @@ test_impl::test_impl (CORBA::ORB_ptr orb) : orb_ (CORBA::ORB::_duplicate (orb))
 
 test_impl::~test_impl (void)
 {
-  this->orb_->shutdown (0);
 }
 
 void
@@ -160,7 +159,7 @@ test_impl::start (void)
 void
 test_impl::finish (void)
 {
-  this->_remove_ref ();
+  this->orb_->shutdown (0);
 }
 
 
