@@ -1,3 +1,9 @@
+Mon Dec 14 14:50:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/OBV/Supports/server.cpp:
+        * tests/OBV/Supports/Supports_Test_impl.cpp:
+          Fixed faulty shutdown code causing server crashes.
+
 Mon Dec 14 13:58:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_component/context_svh.cpp:
